# libmage

./: .gitignore  .mage-test.pub  Cargo.toml  README.md  build.rs  go.mod  go.sum  mage.go  mage_test.go
.github/workflows/: coverage.yml  new_version.yml  test.yml  test_go.yml  tests.yml
example/: Makefile  client.c  compile.sh  mage.h  server.c  test.c
scripts/: version-bump.sh
src/: api_ffi.rs  bin.rs  channel.rs  connection.rs  lib.rs  main-wrap.rs  main.rs  packet.rs  stream.rs  stream_channeled.rs  sys_socket.rs
src/tool/: key.rs  mod.rs  proxy.rs
src/transport/: http.rs  mod.rs  socks.rs  tcp.rs
