[package]
name = "mage"
version = "0.1.0"
authors = ["Dimitris Zervas <dzervas@dzervas.gr>"]
edition = "2018"

[lib]
name = "mage"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "mage"
path = "src/bin.rs"
required-features = ["tool"]

[dependencies]
#std = {default-features=false, features=["panic_immediate_abort"]}
bufstream = "*"
sodiumoxide = "*"

# Channels
futures = { version = "*", optional = true }

# Binary (=tool feature) dependencies
base64 = { version = "*", optional = true }
may = { version = "*", optional = true }
structopt = { version = "*", optional = true }
url = { version = "*", optional = true }

[build-dependencies]
base64 = "*"
cbindgen = "*"
heck = "*"
url = "*"

[features]
default = ["ffi", "trans_tcp"]

channels = [ "futures" ]
ffi = []

#      |               Crates              |         Features         |
tool = ["base64", "may", "structopt", "url", "channels", "trans_socks"]

# Transports
trans_tcp = []
trans_socks = ["trans_tcp"]

[profile.release]
# For these check https://github.com/johnthagen/min-sized-rust
lto = true
codegen-units = 1
panic = "abort"
