[package]
name = "libmage"
version = "0.2.0"
authors = ["Dimitris Zervas <dzervas@dzervas.gr>"]
edition = "2018"

[lib]
name = "mage"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "libmage"
path = "src/bin.rs"
required-features = ["tool"]

[dependencies]
sodiumoxide = { version = "*", default-features = false }

# FFI dependencies
lazy_static = { version = "*", optional = true }

# Transport dependencies
# micro_http = { git = "https://github.com/georgepisaltu/licenta", optional = true }
micro_http = { git = "https://github.com/dzervas/licenta", optional = true }

# Binary (=tool feature) dependencies
base64 = { version = "*", optional = true }
structopt = { version = "*", optional = true }
url = { version = "*", optional = true }

[build-dependencies]
base64 = "*"
cbindgen = "*"
heck = "*"
url = "*"

[features]
default = ["ffi", "trans_tcp"]

ffi = ["lazy_static"]

#      |         Crates             | Features     |
tool = ["base64", "structopt", "url", "trans_socks"]

# Transports
trans_tcp = []
trans_socks = ["trans_tcp"]
trans_http = ["micro_http"]

[profile.release]
# For these check https://github.com/johnthagen/min-sized-rust
codegen-units = 1
lto = true
opt-level = 'z' # Optimize for size
panic = "abort"
# strip = "symbols"
